Added Babel plugin in package.json

--- a/server/package.json
+++ b/server/package.json
@@ -17,5 +17,13 @@
     "express": "^4.21.1",
     "mongoose": "^8.8.2",
     "nodemon": "^3.1.7"
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+  },
+  "babel": {
+    "plugins": [
+      "@babel/plugin-proposal-private-property-in-object"
+    ]
   }
 }
